--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,11 @@
 layout: default
 ---
 
-{{ content }}
+<div class="header">
+<div class="title"><a href="{{ '/' | absolute_url }}">{{ site.title }} | {{ site.tagline }}</a></div>
+{{ site.description }}
+</div>
+
+<hr>
+
+{{content}}
