--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,21 +2,25 @@
 	box-sizing: border-box;
 }
 
+:root {
+  background-color: $background-color;
+  color: $text-color;
+}
 
 body {
+  color: $text-color;
   font-size: 13.34px;
-  // font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
 a {
   color: inherit;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid $link-underline-color;
   text-decoration: none;
   -webkit-transition: border-bottom .2s ease-in-out;
   transition: border-bottom .2s ease-in-out;
   &:hover {
     text-decoration: none;
-    border-bottom-color: #000;
+    border-bottom-color: $link-underline-color-on-hover;
     color: inherit;
   }
 }
@@ -38,6 +42,14 @@ hr {
   font-size: 110%;
 }
 
+h1 {
+  border-bottom-color: $border-bottom-color;
+}
+
+h6 {
+  color: inherit;
+}
+
 pre, code {
   font-size: inherit;
 }
@@ -55,13 +67,12 @@ pre, code {
 }
 
 .light-title {
-  color: #ccc !important;
   a {
-    color: #ccc;
+    color: $secondary-title-color;
     // transition: color .2s ease-in-out;
     &:hover {
       color: inherit;
-      color: rgba(0,0,0,.8);
+      color: $secondary-title-hover-color;
     }
   }
 }
