--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,6 +25,14 @@ a {
   }
 }
 
+a:focus, a:hover {
+  text-decoration: none;
+}
+
+a, a:focus, a:hover {
+  color: inherit;
+}
+
 hr {
   // margin: 1em auto;
   margin: 1.5em 0;
